# mpact-sim

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  CODE_OF_CONDUCT.md  MODULE.bazel  README.md  WORKSPACE  build.sh  cla_test  deps.bzl  extensions.bzl  protobuf_deps.bzl  repos.bzl
.github/workflows/: test_build.yml
gitfiles/: _bazelrc
kokoro/gcp_ubuntu_docker/: continuous.cfg  kokoro_build.sh
mpact/sim/decoder/: BUILD  BinFormat.g4  InstructionSet.g4  ProtoFormat.g4  antler_cc.bzl  antlr_cc.bzl  antlr_parser_wrapper.h  base_class.h  bin_decoder.cc  bin_decoder.h  bin_encoding_info.cc  bin_encoding_info.h  bin_format_contexts.h  bin_format_gen_main.cc  bin_format_visitor.cc  bin_format_visitor.h  bundle.cc  bundle.h  decoder_error_listener.cc  decoder_error_listener.h  decoder_gen_main.cc  encoding_group.cc  encoding_group.h  extract.cc  extract.h  format.cc  format.h  format_name.cc  format_name.h  instruction.cc  instruction.h  instruction_encoding.cc  instruction_encoding.h  instruction_group.cc  instruction_group.h  instruction_set.cc  instruction_set.h  instruction_set_contexts.h  instruction_set_visitor.cc  instruction_set_visitor.h  (+29 more)
mpact/sim/generic/: BUILD  BUILD.bzl  action_point_manager_base.cc  action_point_manager_base.h  arch_state.cc  arch_state.h  breakpoint_manager.cc  breakpoint_manager.h  complex_resource.cc  complex_resource.h  complex_resource_operand.cc  complex_resource_operand.h  component.cc  component.h  config.h  control_register.cc  control_register.h  core_debug_interface.h  counters.h  counters_base.h  data_buffer.cc  data_buffer.h  fifo.h  (+39 more)
(+207 files in other folders)
